cli/tests/snapshot/inputs/errors/include_multiple_list.ncl
# capture = 'stderr'
# command = ['eval']

let foo = {} in
let bar = {} in
{include [foo, bar, foo]}
